Codigo corrijido para que os estilos dos subsites consigam ser acessados

--- a/produtos/subsite9(vaso_ceramica).html
+++ b/produtos/subsite9(vaso_ceramica).html
@@ -9,8 +9,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="/Projeto principal(html+css)/css/styles.css">
-        <link rel="stylesheet" href="/Projeto principal(html+css)/css/substyles.css">
+        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="/css/substyles.css">
     <title>Lojinha da tia andrea</title>
 </head>
 
@@ -64,11 +64,11 @@
                         <li class="atalho1"><a href="/Projeto principal(html+css)/index.html"><img src="/Projeto principal(html+css)/img/Logo.png" alt="Logo da lojinha"></a></li>
                         <li class="atalho3"><a href="#">Categorias</a>
                             <div class="dropdown">
-                                <a href="/Projeto principal(html+css)/index.html">Esculturas</a>
-                                <a href="/Projeto principal(html+css)/index.html">Tecidos</a>
-                                <a href="/Projeto principal(html+css)/index.html">Vasos</a>
-                                <a href="/Projeto principal(html+css)/index.html">Brinquedos</a>
-                                <a href="/Projeto principal(html+css)/index.html">Quadros</a>
+                                <a href="/index.html">Esculturas</a>
+                                <a href="/index.html">Tecidos</a>
+                                <a href="/index.html">Vasos</a>
+                                <a href="/index.html">Brinquedos</a>
+                                <a href="/index.html">Quadros</a>
                             </div>
                         </li>
                     </ul>
@@ -96,7 +96,7 @@
         <div class="produto">
             <ul>
                 <li>
-                    <img src="/Projeto principal(html+css)/img_itens/Vasos/Vaso de ceramica.jpg" alt="Vaso de ceramica">
+                    <img src="/img_itens/Vasos/Vaso de ceramica.jpg" alt="Vaso de ceramica">
                     <h1>Escultura de Leão</h1>
                     <h2>Descrição</h2>
                     <p>R$205</p>
@@ -127,9 +127,9 @@
     
         </div>
     </footer>
-    <script src="/Projeto principal(html+css)/scripts/login.js"></script>
-    <script src="/Projeto principal(html+css)/scripts/cart.js"></script>
-    <script src="/Projeto principal(html+css)/scripts/script.js"></script>
+    <script src="/scripts/login.js"></script>
+    <script src="/scripts/cart.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 
 </html>
