--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                     <li class="login"><a href="#" data-target="#login-box">Clique aqui para fazer login</a></li>
                     <li class="redes"><a href="https://www.whatsapp.com/?lang=pt_BR">Whatsapp</a></li>
                     <li class="redes"><a href="https://www.instagram.com">Instagram</a></li>
+                    <li class="redes"><select id="lang-select">
+                        <option value="pt-br">Portuguese (Brazil)</option>
+                        <option value="en">English</option>
+                        <!-- Add more languages here -->
+                      </select></li>
                 </ul>
             </nav>
             <div class="login-box" id="login-box">
@@ -61,7 +66,7 @@
                     <ul>
                         <li class="atalho2"><a href="#sobremim">Sobre mim</a></li>
                         <li class="atalho1"><a href="#hero"><img src="img/Logo.png" alt="Logo da lojinha"></a></li>
-                        <li class="atalho3"><a href="#">Categorias</a>
+                        <li class="atalho3"><a>Categorias</a>
                             <div class="dropdown">
                                 <a href="#title-0">Esculturas</a>
                                 <a href="#title-1">Tecidos</a>
@@ -166,9 +171,11 @@
         </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/translate-js@2.3.1/dist/translate.min.js"></script>
     <script src="scripts/login.js"></script>
     <script src="scripts/cart.js"></script>
     <script src="scripts/script.js"></script>
+    <script src="scripts/tradutor.js"></script>
 </body>
 
 </html>
