--- a/produtos/subsite1(leao).html
+++ b/produtos/subsite1(leao).html
@@ -22,27 +22,27 @@
                     <li class="login"><a href="#" data-target="#login-box">Clique aqui para fazer login</a></li>
                     <li class="redes"><a href="">Whatsapp</a></li>
                     <li class="redes"><a href="">Instagram</a></li>
+                    <li class="redes">
+                        <select id="lang-select">
+                            <option value="pt-br">Portuguese (Brazil)</option>
+                            <option value="en">English</option>
+                        </select>
+                    </li>
                 </ul>
                 <div class="login-box" id="login-box">
-                    <h2>Fazer Login</h2>
-                    <form>
-                      <div class="user-box">
-                        <input type="text" name="" required="">
-                        <label>Nome de usuário</label>
-                      </div>
-                      <div class="user-box">
-                        <input type="password" name="" required="">
-                        <label>Senha</label>
-                      </div>
-                      <a href="#">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        Fazer Login
-                      </a>
-                    </form>
-                  </div>
+                    <h2 id="loginHeader">Log In</h2>
+                    <form id="myForm">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email">
+                        <span id="emailError"></span>
+                      <br>
+                        <label for="password">Senha:</label>
+                        <input type="password" id="password" name="password">
+                        <span id="passwordError"></span>
+                      
+                        <button type="submit">Logar</button>
+                      </form>
+                </div>
             </div>
             </nav>
         </div>
@@ -130,6 +130,7 @@
     <script src="/scripts/login.js"></script>
     <script src="/scripts/cart.js"></script>
     <script src="/scripts/script.js"></script>
+    <script src="scripts/tradutor_sub.js"></script>
 </body>
 
 </html>
