--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <script type="text/javascript"src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <title>Lojinha da tia andrea</title>
 </head>
 
@@ -21,12 +22,7 @@
                     <li class="login"><a href="#" data-target="#login-box">Clique aqui para fazer login</a></li>
                     <li class="redes"><a href="https://www.whatsapp.com/?lang=pt_BR">Whatsapp</a></li>
                     <li class="redes"><a href="https://www.instagram.com">Instagram</a></li>
-                    <li class="redes">
-                        <select id="lang-select">
-                            <option value="pt-br">Portuguese (Brazil)</option>
-                            <option value="en">English</option>
-                        </select>
-                    </li>
+                    <li class="redes"><div id="google_translate_element"></div></li>
                 </ul>
             </nav>
             <div class="login-box" id="login-box">
